k8s/temp1.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: container-1
  namespace: namespace-1-1
  labels:
    app: container-1-app-1
spec:
  containers:
    - name: container-1
      image: fefefe8888/my-ubuntu:18.04
      imagePullPolicy: IfNotPresent
      command: ["/bin/bash","-ce","tail -f /dev/null"]
---
