k8s/apache2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache2
  template:
    metadata:
      labels:
        app: apache2
    spec:
      containers:
      - name: apache2
        image: ubuntu/apache2:latest
        ports:
        - containerPort: 80
          name: apache2
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: apache2-service
spec:
  type: NodePort
  selector:
    app: apache2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
    name: apache
