k8s/container-2.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: container-2
  namespace: namespace-1-1
  labels:
    app: apache2
spec:
  containers:
    - name: container-2
      image: dachenpanw/ignite2023_docker:91
      imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: apache2-service-2
  namespace: namespace-1-1
spec:
  type: NodePort
  selector:
    app: apache2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31280
    name: apache-2
