k8s/container-3.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: container-3
  namespace: namespace-1-2
  labels:
    app: apache2
spec:
  containers:
    - name: container-3
      image: dachenpanw/ignite2023_docker:91
      imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: apache2-service-3
  namespace: namespace-1-2
spec:
  type: NodePort
  selector:
    app: apache2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 32180
    name: apache
