k8s/multi-pod-1.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod-1
  namespace: namespace-1-1
  labels:
    app: apache2
spec:
  containers:
    - name: container-4
      image: dachenpanw/ignite2023_docker:91
      imagePullPolicy: IfNotPresent
  containers:
    - name: container-5
      image: dachenpanw/ignite2023_docker:91
      imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: apache2-service-4
  namespace: namespace-1-1
spec:
  type: NodePort
  selector:
    app: apache2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31480
    name: apache-4
