k8s/myapp.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp1
  labels:
    app: myapp1
spec:
  containers:
    - name: myapp1
      image: dachenpanw/ignite2023_docker:90
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8081
---
---
apiVersion: v1
kind: Service
metadata:
  name: myapp1
spec:
  ports:
  - port: 8081
    protocol: TCP
  selector:
    app: myapp1
  type: ClusterIP
---
---
