k8s/splunk-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splunk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: splunk
  template:
    metadata:
      labels:
        app: splunk
    spec:
      containers:
        - name: splunk
          image: splunk/splunk:latest
          ports:
            - containerPort: 8000
            - containerPort: 8088
            - containerPort: 8089
            - containerPort: 8191
            - containerPort: 9887
            - containerPort: 9997
---
apiVersion: v1
kind: Service
metadata:
  name: splunk
spec:
  type: NodePort
  selector:
    app: splunk
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 38000
    name: splunk
