k8s/npa-egress-web.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: block-egress-web
  namespace: namespace-1-1
spec:
  podSelector:
    matchLabels:
      Block_Web: block_web
  egress:
  - ports:
    - port: 1
    - endPort: 79
