k8s/npa-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-isolation-egress
  namespace: namespace-1-1
spec:
  podSelector:
    matchLabels:
     Label_Isolation : isolation
  policyTypes:
    - Egress
