k8s/npa-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pod-isolation-ingress
  namespace: namespace-1-1
spec:
  podSelector:
    matchLabels:
      Label_Allow: allow
  ingress:
  - ports:
    - port: 80
