k8s/npa-range.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-egress-web
  namespace: namespace-1-1
spec:
  podSelector:
    matchLabels:
      Block_Web: block_web
  policyTypes:
    - Egress
  egress:
    - to:
      # - ipBlock:
      #     cidr: 10.0.0.0/24
      ports:
        - protocol: TCP
          port: 32000
          endPort: 32768
