k8s/npa.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-isolation
  namespace: namespace-1-1
spec:
  podSelector:
    matchLabels:
      myapp: isolation
  policyTypes:
    - Egress
